# TBC

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.make  README.md  SECURITY.md  re
.devcontainer/: devcontainer.json
crates/coreprover-bridge/: Cargo.toml
crates/coreprover-bridge/tests/: escrow_clients.rs  receipt_serialization.rs
crates/coreprover-cli/: Cargo.toml
crates/coreprover-contracts/: README  foundry.toml
crates/coreprover-contracts/script/: Deploy.s.sol  DeployTestnet.s.sol
crates/coreprover-contracts/src/: CoreProverEscrow.sol  ReceiptVault.sol
crates/coreprover-contracts/test/: CoreProverEscrow.t.sol  ReceiptVault.t.sol
crates/coreprover-sdk/: Cargo.toml
crates/coreprover-service/: Cargo.toml
crates/coreprover-service/src/: lib.rs
crates/coreprover-zk/: Cargo.toml
crates/coreprover-zk/circuits/: README  ownership.circom
crates/coreprover-zk/src/: lib.rs  prover.rs  verifier.rs
crates/coreprover-zk/tests/: circuit_inputs.rs
crates/tbc-core/: Cargo.toml
crates/tbc-gateway/: Cargo.toml
docker/: .dockerignore  Dockerfile.cli  Dockerfile.service  docker-compose.dev.yml  docker-compose.yml
docs/: README.md
docs/api/: README.md  escrow-api.md  events-api.md
docs/guides/: deployment.md  integration.md  quickstart.md
docs/specs/: coreprover-ext.md  coreprover.md
examples/rest-api-client/: Cargo.toml
examples/simple-integration/: Cargo.toml
scripts/: cheatsheet.md
spec/: TGP-00.md
src/controller/src/: main.rs  (+2 more)
tests/: controller_smoke.rs  integration_tests.rs
tests/e2e/: test_full_flow.rs  test_timeout.rs
(+16 files in other folders)
